--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -352,12 +352,103 @@ template {
 /* =============
     Base
 ============= */
+ul {
+  padding: 0;
+  margin: 0;
+}
+ul li {
+  list-style: none;
+}
+
+a:link, a:visited {
+  text-decoration: none;
+  transition: 0.25s;
+}
+
+input, button, textarea {
+  border: none;
+}
+
+.show-for-md {
+  display: none;
+}
+@media (min-width: 768px) {
+  .show-for-md {
+    display: block;
+  }
+}
+
+.show-for-lg {
+  display: none;
+}
+@media (min-width: 1025px) {
+  .show-for-lg {
+    display: block;
+  }
+}
+
+.show-for-xl {
+  display: none;
+}
+@media (min-width: 1440px) {
+  .show-for-xl {
+    display: block;
+  }
+}
+
+@media (min-width: 1440px) {
+  .hero-container {
+    display: grid;
+    grid-template-areas: ". hero .";
+    grid-template-columns: auto 1440px auto;
+  }
+}
+.hero-container > div {
+  grid-area: hero;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 15px auto 15px;
+  grid-template-areas: ". container .";
+}
+@media (min-width: 1440px) {
+  .grid-container {
+    grid-template-columns: auto 1440px auto;
+  }
+}
+.grid-container > div {
+  grid-area: container;
+}
+
 /* =============
     Typography
 ============= */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 /* =============
     Buttons
 ============= */
+.button {
+  background-color: #42B5A0;
+  font-family: "Nunito", sans-serif;
+  font-size: 21px;
+  font-weight: 600;
+  font-style: italic;
+  color: white;
+  width: 100%;
+  padding: 20px;
+}
+
 /* =============
     Forms
 ============= */
@@ -395,3 +486,105 @@ textarea {
 /* =============
     Pop-up
 ============= */
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+section > div {
+  border: solid 1px red;
+  position: relative;
+  overflow: hidden;
+  width: 700px;
+  height: auto;
+}
+section > div i {
+  position: absolute;
+  z-index: 1;
+  left: -145px;
+  top: 100px;
+  font-size: 300px;
+  color: #FA448D;
+  -webkit-animation: rotation 2s infinite linear;
+}
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+  }
+}
+section > div #X {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+section > div #handle {
+  position: absolute;
+  top: -30px;
+  z-index: 2;
+  left: 80px;
+  transform: rotate(20deg);
+}
+section > div #waves {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 50%;
+}
+section > div #form {
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px 80px 50px;
+}
+section > div #form form {
+  width: 60%;
+}
+section > div #form section {
+  border-bottom: solid #42B5A0 2px;
+}
+section > div #form section input, section > div #form section textarea {
+  background-color: transparent;
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  width: 100%;
+  padding: 20px 0;
+}
+section > div #form section ::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #42B5A0;
+  opacity: 1;
+}
+section > div #form section :-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #42B5A0;
+}
+section > div #form section ::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #42B5A0;
+}
+section h2 {
+  padding-top: 30px;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 48px;
+  font-weight: 800;
+  font-style: italic;
+  color: #FA448D;
+}
+section h3 {
+  padding: 20px 0;
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  font-style: italic;
+  color: #FA448D;
+}
+section #description {
+  padding: 0;
+}
