--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,3 +1,17 @@
 /* =============
     Typography
 ============= */
+
+//font-family: 'Montserrat', sans-serif;
+//font-family: 'Nunito', sans-serif;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin: 0;
+	padding: 0;
+}
