--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -1,3 +1,13 @@
 /* =============
     Buttons
 ============= */
+.button{
+    background-color: $green;
+    font-family: 'Nunito', sans-serif;
+    font-size: 21px;
+    font-weight: 600;
+    font-style: italic;
+    color: white;
+    width: 100%;
+    padding: 20px;
+}
