--- a/dev/scss/sections/_pop-up.scss
+++ b/dev/scss/sections/_pop-up.scss
@@ -1,4 +1,116 @@
 /* =============
     Pop-up
 ============= */
+section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    >div{
+        border: solid 1px red;
+        position: relative;
+        overflow: hidden;
+        width: 700px;
+        height: auto;
+        i{
+            position: absolute;
+            z-index: 1;
+            left: -145px;
+            top: 100px;
+            font-size: 300px;
+            color: $hotpink;
+            -webkit-animation: rotation 2s infinite linear;
+        
+            @-webkit-keyframes rotation {
+                from {
+                        -webkit-transform: rotate(0deg);
+                }
+                to {
+                        -webkit-transform: rotate(359deg);
+                }
+            }
+            
+        }
+        #X{
+            position: absolute;
+            top: 30px;
+            right: 30px;
+        }
+        #handle{
+            position: absolute;
+            top: -30px;
+            z-index: 2;
+            left: 80px;
+            transform:rotate(20deg)
+        }
+        #waves{
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            width: 50%;
+        }
+        #form{
+            display: flex;
+            justify-content: flex-end;
+            margin: 10px 80px 50px;
+            form{
+                width: 60%;
+                
+            }
+            section{
+                
+                border-bottom: solid $green 2px;
+                input, textarea{
+                    background-color: transparent;
+                    font-family: 'Nunito', sans-serif;
+                    font-weight: 400;
+                    font-size: rem-calc(16);
+                    width: 100%;
+                    padding: 20px 0;
+                }
+                ::placeholder {
+                    /* Chrome, Firefox, Opera, Safari 10.1+ */
+                    color: $green;
+                    opacity: 1;
+                }
+        
+                :-ms-input-placeholder {
+                    /* Internet Explorer 10-11 */
+                    color: $green;
+                }
+        
+                ::-ms-input-placeholder {
+                    /* Microsoft Edge */
+                    color: $green;
+                }
+            }
+        }
+        
+    }
+    
+    h2{
+        padding-top:30px;
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 48px;
+        font-weight: 800;
+        font-style: italic;
+        color:$hotpink;
+    }
 
+    h3{
+        padding: 20px 0;
+        text-align: center;
+        font-family: 'Nunito', sans-serif;
+        font-size: 16px;
+        line-height: 24px;
+        font-weight: 500;
+        font-style: italic;
+        color: $hotpink;
+    }
+    #description{
+        padding: 0;
+    }
+}
+        
