--- a/dev/scss/sections/_index-content.scss
+++ b/dev/scss/sections/_index-content.scss
@@ -1,3 +1,50 @@
 /* =============
     Index
 ============= */
+#hero-image{
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 80vh;
+    background-image: url(../img/hero.jpg);
+    background-blend-mode: multiply;
+    background-color: rgba($purple, $alpha: 0.3);
+    
+    >div{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            @include md{
+                justify-content: center;
+            }
+            @include xl{
+                justify-content: initial;
+            }
+        h1{
+            color: $hotpink;
+            font-family: 'Montserrat', sans-serif;
+            font-size: rem-calc(36);
+            line-height: rem-calc(44);
+            font-weight: 900;
+            text-align: left;
+            margin: 0 30px;
+            @include md{
+                width: 60%;
+                text-align: center;
+                font-size: rem-calc(72);
+                line-height: rem-calc(88);
+            }
+            @include lg{
+                width: 100%;
+            }
+            @include xl{
+                width: 60%;
+                margin: 0 60px;
+                text-align: left;
+            }
+            .italic{
+                font-style: italic;
+            }
+        }
+    }
+}
