--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -630,8 +630,13 @@ header div #burger-container i {
   display: none;
   position: absolute;
 }
+#pop-up #shadow-bg {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
 #pop-up > div {
-  border: solid 1px red;
   position: relative;
   overflow: hidden;
   width: 700px;
