--- a/dev/scss/sections/_pop-up.scss
+++ b/dev/scss/sections/_pop-up.scss
@@ -7,8 +7,13 @@
     // display: flex;
     // align-items: center;
     // justify-content: center;
+    #shadow-bg{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        background-color: rgba($color:black, $alpha: 0.4);
+    }
     >div{
-        border: solid 1px red;
         position: relative;
         overflow: hidden;
         width: 700px;
