--- a/dev/scss/sections/_pop-up.scss
+++ b/dev/scss/sections/_pop-up.scss
@@ -5,8 +5,8 @@
     // display: none;
     position: absolute;
     // display: flex;
-    // align-items: center;
-    // justify-content: center;
+    align-items: center;
+    justify-content: center;
     #shadow-bg{
         position: fixed;
         height: 100vh;
