--- a/dev/scss/sections/_pop-up.scss
+++ b/dev/scss/sections/_pop-up.scss
@@ -41,6 +41,7 @@
             
         }
         #X{
+            z-index: 200;
             position: absolute;
             top: 30px;
             right: 30px;
