--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -628,13 +628,12 @@ header div #burger-container i {
 ============= */
 #pop-up {
   position: fixed;
-  margin: auto;
-}
-#pop-up #shadow-bg {
-  position: fixed;
+  background-color: rgba(0, 0, 0, 0.4);
   height: 100vh;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #pop-up > div {
   position: relative;
