--- a/dev/scss/sections/_music-box.scss
+++ b/dev/scss/sections/_music-box.scss
@@ -1,9 +1,12 @@
 #music-box-container {
-    margin-top: 100px;
-    margin-bottom: 50px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    // margin-top: 100px;
+    // margin-bottom: 50px;
+    
+    // display: flex;
+    // justify-content: flex-end;
 
     #music {
         #box {
